# this_is_a_robbery

./: Cargo.toml
assets/: bank_collider.gltf  bank_nav_mesh.gltf  test_nav_mesh.gltf
blender/: blank.blend  test_nav_mesh.blend
crates/client/: Cargo.toml
crates/client/src/: camera.rs  main.rs  physics_replication.rs  server_entity_map.rs  state.rs
crates/client/src/agents/: mod.rs
crates/client/src/character/: controls.rs  mod.rs
crates/client/src/elements/: gltf_collider.rs
crates/client/src/input/: mod.rs
crates/client/src/networking/: mod.rs  params.rs
crates/common/: Cargo.toml
crates/common/src/: agents.rs  editor.rs  lib.rs  physics.rs  state.rs
crates/common/src/character/: controller.rs  mod.rs
crates/common/src/elements/: gltf_collider.rs
crates/common/src/networking/: mod.rs  replicate_despawn.rs
crates/editor/: Cargo.toml
crates/editor/src/: level.rs  main.rs
crates/editor/src/ui/: bevy_inspector.rs  element_selection.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  level.rs  main.rs  physics_replication.rs  replicate_despawn.rs
crates/server/src/agents/: investigation.rs  mod.rs  nav_mesh.rs  navigation.rs  patrolling.rs  sight.rs  tasks.rs
crates/server/src/agents/tasks/: mod.rs  patrolling.rs
crates/server/src/character/: mod.rs
crates/server/src/elements/: gltf_collider.rs  mod.rs
crates/server/src/networking/: mod.rs
crates/server/src/state/: initialize_pairs.rs  mod.rs
