[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bevy = "0.16.1"
nevy.git = "https://github.com/space-bandits/nevy"
# nevy.path = "../nevy"
serde = "1.0"
log = "*"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
avian3d = "0.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
